# ChangeLog for dev-php/PEAR-Archive_Tar
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-Archive_Tar/ChangeLog,v 1.32 2010/05/09 16:27:25 armin76 Exp $

  09 May 2010; Raúl Porcel <armin76@gentoo.org>
  PEAR-Archive_Tar-1.3.5.ebuild:
  alpha/arm/ia64/s390/sh/sparc stable wrt #311633

  15 Apr 2010; Markus Meier <maekke@gentoo.org>
  PEAR-Archive_Tar-1.3.5.ebuild:
  amd64 stable, bug #311633

  12 Apr 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  PEAR-Archive_Tar-1.3.5.ebuild:
  x86 stable wrt bug #311633

*PEAR-Archive_Tar-1.3.5 (05 Jan 2010)

  05 Jan 2010; Ben de Groot <yngwin@gentoo.org>
  +PEAR-Archive_Tar-1.3.5.ebuild:
  Version bump

*PEAR-Archive_Tar-1.3.3 (23 Sep 2009)

  23 Sep 2009; Steve Dibb <beandog@gentoo.org>
  +PEAR-Archive_Tar-1.3.3.ebuild, +metadata.xml:
  Initial commit; new split ebuilds for PEAR base install
