@@ -1,6 +1,12 @@
 # ChangeLog for dev-php/PEAR-Archive_Tar
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-Archive_Tar/ChangeLog,v 1.32 2010/05/09 16:27:25 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-Archive_Tar/ChangeLog,v 1.33 2010/06/11 22:30:29 mabi Exp $
+
+*PEAR-Archive_Tar-1.3.7 (11 Jun 2010)
+
+  11 Jun 2010; <mabi@gentoo.org> -PEAR-Archive_Tar-1.3.3.ebuild,
+  +PEAR-Archive_Tar-1.3.7.ebuild:
+  version bump, remove old
 
   09 May 2010; Raúl Porcel <armin76@gentoo.org>
   PEAR-Archive_Tar-1.3.5.ebuild:
